# cfg-cpp.nvim

./: .gitignore  README.md  init.lua
cpp/: CMakeLists.txt  main.cpp
lua/cfg_cpp/: health.lua  init.lua
plugin/: cfg-cpp.lua  init.lua
plugin/cfg_cpp/: init.lua
